--- a/src/app.config.json
+++ b/src/app.config.json
@@ -1,4 +1,4 @@
 {
-  "title": "Vue Enterprise Boilerplate",
+  "title": "",
   "description": "Opinionated boilerplate project for an enterprise Vue frontend"
 }
